etc/kubernetes/manifests/dc-hasher.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata: 
  name: dc-hasher
spec: 
  replicas: 1
  selector: 
    dcdockericons: v2
  template:
    metadata:
      labels: 
        dcdockericons: v2
    spec:
      containers:
        -
          args:
            -
              hasher.rb
          command:
            -
              ruby
          image: eleigle/ruby:sinatra-thin
          name: container-po-hasher
          ports:
            -
              containerPort: 8081
              protocol: TCP
          volumeMounts:
            -
              mountPath: /hasher/hasher.rb
              name: volume-po-hasher
              readOnly: true
              subPath: hasher.rb
          workingDir: /hasher/
      volumes:
        -
          name: volume-po-hasher
          secret:
            defaultMode: 0400
            items:
              -
                key: hasher.rb
                mode: 0400
                path: hasher.rb
            secretName: secret-hasher
