etc/kubernetes/manifests/dc-webui.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:  
  name: dc-webui
spec: 
  replicas: 1
  selector: 
    dockercoins: webui
  template:
    metadata:
      labels: 
        dockercoins: webui
    spec:
      containers:
        -
          args:
            -
              webui.js
          command:
            -
              node
          image: eleigle/node:express-redis
          name: container
          ports:
            -
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            -
              mountPath: /app/webui.js
              name: volume
              readOnly: true
              subPath: webui.js
            -
              mountPath: /app/files
              name: volume-files
              readOnly: true
            
          workingDir: /app/
      initcontainers:
        -
          args:
            -
                       
          command:
            -
              sh 
              -c 
          image: eleigle/node:express-redis
          name: container
          ports:
            -
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            -
              mountPath: /app/webui.js
              name: volume
              readOnly: true
              subPath: webui.js
            -
              mountPath: /app/files
              name: volume-files
              readOnly: true
            
          workingDir: /app/
      volumes:
        -
          name: volume
          secret:
            defaultMode: 0400
            items:
              -
                key: webui.js
                mode: 0400
                path: webui.js
            secretName: secret-webui
        -
          name: volume-files
          secret:
            defaultMode: 0400
            items:
              -
                key: webui.js
                mode: 0400
                path: webui.js
            secretName: secret-webui
