etc/kubernetes/manifests/sts-redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata: 
  name: sts-redis
spec: 
  replicas: 1
  selector: 
    matchLabels:
      stsredis: v2
  serviceName: redis
  template:
    metadata:
      labels: 
        stsredis: v2
    spec:
      containers:
        -
          args:
            -
             redis-server
          command:
            -
              docker-entrypoint.sh
          image: redis:latest
          name: container
          ports:
            -
              containerPort: 6379
              protocol: TCP
          volumeMounts:
            -
              mountPath: /data/
              name: volume
              readOnly: true
          workingDir: /data/
  volumeClaimTemplates:
    -
      metadata:
        name: volume
      spec:
        accessModes: 
          - ReadWriteOnce
        resources:
           limits: 
           storage: 1Gi
        requests:
           storage: 1Gi
           # lo anulamos pq  depende de amazon azure, ... storageClassName:  gp2
           volumeMode: Filesystem
