etc/kubernetes/manifests/webui-po.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webui-po
spec:
  containers:
    -
      args: 
        - webui.js
      command:
        - node
      image: academiaonline/simplilearn-dockercoins:latest-webui
      livenessProbe:
        tcpSocket:
          port: 8080
      name: webui-container
      ports:
        -
          containerPort: 8080
          protocol: TCP
      resources:
        limits:
          cpu: 100m
          memory: 100M
        requests:
          cpu: 100m
          memory: 100M
      volumeMounts:
        -
          mountPath: /app/
          name: webui-files-volume
          readOnly: true
        -
          mountPath: /app/webui.js
          name: webui-secret-volume
          readOnly: true
          subPath: webui.js
      workingDir: /app/
  volumes:
    -
      emptyDir:
        medium: Memory
        sizeLimit: 10M
      name: webui-git-volume
    -
      emptyDir:
        medium: Memory
        sizeLimit: 10M
      name: webui-files-volume
    -
      secret:
        defaultMode: 0400
        items:
          -
            key: webui.js
            mode: 0400
            path: webui.js
        secretName: webui-secret
      name: webui-secret-volume
