etc/kubernetes/manifests/worker-po.yaml
apiVersion: v1
kind: Pod
metadata:
  name: worker-po
spec:
  containers:
    -
      args: 
        - worker.py
      command:
        - python
      image: academiaonline/simplilearn-dockercoins:latest-worker
      name: worker-container
      resources:
        limits:
          cpu: 100m
          memory: 100M
        requests:
          cpu: 100m
          memory: 100M
      volumeMounts:
        -
          mountPath: /app/
          name: public
          readOnly: true
      workingDir: /app/
  volumes:
    -
      emptyDir:
        medium: Memory
        sizeLimit: 1M
      name: public
