etc/kubernetes/manifests/hasher-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hasher
spec:
  selector:
    name: hasher-rc
  ports:
    - 
      port: 8080
      protocol: TCP
      targetPort: 8080
