etc/kubernetes/manifests/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    name: redis-rc
  ports:
    - 
      port: 6379
      protocol: TCP
      targetPort: 6379
