etc/kubernetes/manifests/rng-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rng
spec:
  selector:
    name: rng-rc
  ports:
    - 
      port: 8080
      protocol: TCP
      targetPort: 8080
