etc/kubernetes/manifests/svc-hasher.yaml
apiVersion: v1
kind: Service
metadata:
  name: hasher
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    dcdockericons: v2
  type: ClusterIP
