etc/kubernetes/manifests/svc-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    -
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    dcredis: v2
  type: ClusterIP
