etc/kubernetes/manifests/hasher-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hasher-netpol
spec:
  podSelector:
    matchLabels:
      name: hasher-rc
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: worker-rc
      ports:
        - protocol: TCP
          port: 8080
