etc/kubernetes/manifests/redis-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-netpol
spec:
  podSelector:
    matchLabels:
      name: redis-rc
  ingress:
    -
      from:
        - 
          podSelector:
            matchLabels:
              name: worker-rc
        - 
          podSelector:
            matchLabels:
              name: webui-rc
      ports:
        - protocol: TCP
          port: 6379
