etc/kubernetes/manifests/webui-netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: webui-netpol
spec:
  podSelector:
    matchLabels:
      name: webui-rc
  ingress:
    - 
      ports:
        - 
          protocol: TCP
          port: 8080
  policyTypes:
    - Ingress
