etc/kubernetes/manifests/worker-netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: worker-netpol
spec:
  podSelector:
    matchLabels:
      name: worker-rc
  policyTypes:
    - Ingress
